<resources>
    <string name="app_name">Smart display</string>
    <string name="facebook_app_id">584142919149168</string>
    <string name="fb_login_protocol_scheme">fb584142919149168</string>

    <string name="welcome">Advert is a hub of all business</string>
    <string name="start_working_now">Advertise your product on Smart display.</string>
    <string name="have_nice_time">Start adverting on your car now.</string>
    <string name="slider_sub_info1">Let the world know what you have and what your company produce </string>
    <string name="slider_sub_info2">Smart display is an advertising platform for both companies and taxis </string>
    <string name="slider_sub_info3">Play advert video on your taxi and increase your daily income </string>

    <string name="start_advertising">Start adverting</string>
    <string name="start_updating">Download data</string>
    <string name="languages">Languages</string>
    <string name="title_activity_driver_dashboard">DriverDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="my_adverts">My adverts</string>
    <string name="finances">Finance</string>
    <string name="files">Files</string>
    <string name="about_tablet">About this tablet</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>

    <string name="my_cars">My cars</string>
    <string name="view_all">View all</string>
    <string name="set_place">Set place</string>
    <string name="assign_this_car">Assign this car to this Tablet</string>
    <string name="assign">Assign</string>

    <string name="car_is_not_registered">There is no registered car found by your name. Add your car now</string>
    <string name="add_new_car">Add new car</string>
    <string name="car_category">Select your car category</string>
    <string name="register_car">Register car</string>
    <string name="plate_number">Enter plate number</string>
    <string name="car_registration_info">Register your taxi or your public transport car now and get more income</string>


    <string name="add_email">Please add your email address</string>
    <string name="add_password">Please add your password</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="information">Note.This is application is prepared for tab advertRoom business like advertising videos and downloading files only.</string>
    <string name="set_place_now">Set my address</string>
    <string name="select_your_city">Select your city</string>
    <string name="register_my_place">Register my place</string>
    <string name="place_error">Please select your current resident city</string>
    <string name="selected">Selected</string>
    <string name="edit_profile">Edit</string>

    <string name="new_download">New download</string>
    <string name="download_more">
        Download your file now and start selling
    </string>

    <string name="select_car_type">Select your car type</string>
    <string name="select_car_category">Select your car category</string>
    <string name="select_car_work_place">Select your car work place/city</string>

    <string name="total_download_size">Total download file size</string>
    <string name="file_size">0 MB</string>
    <string name="your_download">Your total download size</string>
    <string name="download_history">Your download history</string>
    <string name="no_registered_car">There is no registered car by your name. Register your car now and generate more income</string>

    <string name="assigned_text">This tablet is assigned to below car.</string>
    <string name="workinPlaceInfo">
        This tablet is assigned to the above car but, the car working place is not set yet. Please set car working place by clicking set place
    </string>

    <string name="register_car_place">Register car work place</string>
    <string name="select_car_city">Select city</string>
    <string name="driver_download_more">Download your files now and start advertising.</string>
    <string name="receieve_files">Receive files from others and start adverting now.</string>
    <string name="receiveFiles">Receive files</string>
    <string name="receieveFileButton">Receive file now</string>

    <string name="today_advert">Today\'s adverts</string>
    <string name="unsend_adverts">Unsend adverts</string>
    <string name="all_advert">All adverts</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
