<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_adverts"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/my_adverts"
            />
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/my_cars"
            />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/finances" />
        <item
            android:id="@+id/nav_file"
            android:icon="@drawable/ic_attach_file_black_24dp"
            android:title="@string/files" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_about_tablet"
                android:icon="@drawable/ic_tablet_black_24dp"
                android:title="@string/about_tablet" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
