<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/background_light"
    app:cardBackgroundColor="#FF8C00"
    android:layout_width="280dp"
    app:contentPadding="10dp"
    android:layout_height="match_parent"
    tools:context=".auth.view.downloaderView.TotalDownloadSizeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/your_download"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <include layout="@layout/horiz_divider"/>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/total_download_file_ze"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/total_download_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/file_size"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:text="@string/file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>