<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".auth.view.activities.AddNewCarActivity">
    <include layout="@layout/app_tool_bar"/>

    <TextView
        android:id="@+id/registration_info"
        android:layout_marginTop="20dp"
        android:text="@string/car_registration_info"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <!--Cars type layout -->
    <TextView
        android:text="@string/car_category"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/car_category_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RadioGroup>

    <LinearLayout
        android:id="@+id/car_type_layout_container"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/car_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:id="@+id/cars_type_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/EditTextHintNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/plate_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#242424"
                app:backgroundTint="#242424"
                android:hint="@string/plate_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_car_button"
            android:text="@string/register_car"
            android:background="@drawable/button_shape"
            android:textColor="@color/white_color"
            android:visibility="gone"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>