<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/welcome_and_wish"
        android:textColor="@color/textColor"
        android:text="@string/welcome"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/welcome_and_wish"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/start_advertising"
            android:text="@string/start_advertising"
            android:paddingTop="5dp"
            android:textSize="18dp"
            android:elevation="0dp"
            android:textAllCaps="false"
            android:layout_marginBottom="50dp"
            android:textColor="@color/textColor"
            android:background="@drawable/button_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/start_updating"
            android:text="@string/start_updating"
            android:paddingTop="5dp"
            android:textSize="18dp"
            android:elevation="0dp"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:background="@drawable/tranparent_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>