<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.view.fragments.RegisterNewCar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

           <ProgressBar
               android:id="@+id/progressBar"
               android:layout_gravity="center"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/carsMainLayout"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/firstLayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:text="@string/no_registered_car" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/registerCar"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:text="@string/register_car"
                        android:layout_gravity="center">

                    </com.google.android.material.button.MaterialButton>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/carRegistrationLayout"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/select_car_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/car_type_recyclerview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:id="@+id/carCategoryLayout"
                        android:layout_marginTop="20dp"
                        android:visibility="gone"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/select_car_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/car_category_recyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/plateInputLayout"
                        android:visibility="gone"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- Email Label -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:theme="@style/EditTextHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorPrimary"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="8dp">
                            <EditText android:id="@+id/plateNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColorHint="@color/colorPrimary"
                                android:textColor="@color/colorPrimary"
                                app:backgroundTint="@color/colorPrimary"
                                android:hint="Enter plate number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/carErrorShower"
                            android:textColor="@android:color/holo_red_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <Button
                            android:id="@+id/registerCarButton"
                            android:text="@string/register_car"
                            android:background="@drawable/button_shape"
                            android:textColor="@android:color/white"
                            android:layout_marginTop="10dp"
                            android:textAllCaps="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </Button>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</FrameLayout>